--- a/BarBot/BarBot.UWP/BarBot.UWP.csproj
+++ b/BarBot/BarBot.UWP/BarBot.UWP.csproj
@@ -166,6 +166,7 @@
       <DependentUpon>OrderQueue.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\Login\UWPLoginService.cs" />
     <Compile Include="TestClient\TestClient.xaml.cs">
       <DependentUpon>TestClient.xaml</DependentUpon>
     </Compile>
