#2 added blue filter icon to indicate filter applied on AppBar

--- a/BarBot/BarBot.UWP/BarBot.UWP.csproj
+++ b/BarBot/BarBot.UWP/BarBot.UWP.csproj
@@ -237,8 +237,8 @@
     <Content Include="Assets\BackButton.png" />
     <Content Include="Assets\back_arrow.png" />
     <BundleResource Include="Assets\custom_recipe.png" />
-    <Content Include="Assets\filter1.png" />
-    <Content Include="Assets\filter2.png" />
+    <Content Include="Assets\filter-blue.png" />
+    <Content Include="Assets\filter-white.png" />
     <Content Include="Assets\HexagonTile.png" />
     <Content Include="Assets\HexagonTileGradient.png" />
     <Content Include="Assets\NextButton.png" />
