--- a/BarBot/BarBot.UWP/BarBot.UWP.csproj
+++ b/BarBot/BarBot.UWP/BarBot.UWP.csproj
@@ -236,8 +236,7 @@
   <ItemGroup>
     <Content Include="Assets\BackButton.png" />
     <Content Include="Assets\back_arrow.png" />
-    <BundleResource Include="Assets\custom_recipe.png" />
-    <Content Include="Assets\filter-blue.png" />
+    <Content Include="Assets\custom_recipe.png" />
     <Content Include="Assets\filter-white.png" />
     <Content Include="Assets\HexagonTile.png" />
     <Content Include="Assets\HexagonTileGradient.png" />
@@ -359,6 +358,11 @@
     <Page Include="UserControls\CategoryList\Uc_CategoryList.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\RecipeDetail\RecipeDetailStyles.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Page>
     <Page Include="UserControls\RecipeDetail\Uc_AddIngredientButton.xaml">
       <SubType>Designer</SubType>
