--- a/BarBot/BarBot.UWP/BarBot.UWP.csproj
+++ b/BarBot/BarBot.UWP/BarBot.UWP.csproj
@@ -192,6 +192,12 @@
     <Compile Include="UserControls\ContainerPanel\ContainerLoadContentDialog.xaml.cs">
       <DependentUpon>ContainerLoadContentDialog.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UserControls\RecipeDetail\Dialogs\CupContentDialog.xaml.cs">
+      <DependentUpon>CupContentDialog.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\RecipeDetail\Dialogs\PouringContentDialog.xaml.cs">
+      <DependentUpon>PouringContentDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\ToUpperConverter.cs" />
     <Compile Include="UserControls\RecipeDetail\Uc_AddIngredientButton.xaml.cs">
       <DependentUpon>Uc_AddIngredientButton.xaml</DependentUpon>
@@ -356,6 +362,14 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UserControls\CategoryList\Uc_CategoryList.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\RecipeDetail\Dialogs\CupContentDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\RecipeDetail\Dialogs\PouringContentDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
