--- a/BarBot/BarBot/BarBot.Core.csproj
+++ b/BarBot/BarBot/BarBot.Core.csproj
@@ -32,6 +32,8 @@
     <Compile Include="Model\Category.cs" />
     <Compile Include="Model\CategoryList.cs" />
     <Compile Include="Model\ContainerList.cs" />
+    <Compile Include="Model\Garnish.cs" />
+    <Compile Include="Model\GarnishList.cs" />
     <Compile Include="WebSocket\DictinaryOrEmptyArrayConverter.cs" />
     <Compile Include="WebSocket\Message.cs" />
     <Compile Include="Model\Ingredient.cs" />
