--- a/BarBot/Droid/BarBot.Droid.csproj
+++ b/BarBot/Droid/BarBot.Droid.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Service\Navigation\NavigationService.cs" />
     <Compile Include="View\Container\ContainerActivity.cs" />
     <Compile Include="Utils\Helpers.cs" />
+    <Compile Include="View\Container\ContainerAdapter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -158,6 +159,13 @@
     <AndroidResource Include="Resources\drawable-xhdpi\ic_clear_white_48dp.png" />
     <AndroidResource Include="Resources\drawable-xxhdpi\ic_clear_white_48dp.png" />
     <AndroidResource Include="Resources\drawable-xxxhdpi\ic_clear_white_48dp.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\ic_settings_white_48dp.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\ic_settings_white_48dp.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\ic_settings_white_48dp.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\ic_settings_white_48dp.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\ic_settings_white_48dp.png" />
+    <AndroidResource Include="Resources\layout\ContainersLayout.axml" />
+    <AndroidResource Include="Resources\layout\ContainerRow.axml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="View\" />
